# agent-bridge

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json  test_agent.py  test_integrated.py  test_shepaw_style.py  tsconfig.base.json
.codebuddy/commands/: plan.md  review.md
claude_code/: claude_code_agent.py  test_agent.py
implementations/claude-code-py/: claude_code_agent.py
implementations/claude-code-ts/: README.md  package.json  tsup.config.ts
implementations/claude-code-ts/src/: agent.ts  approval-cache.ts  approval-keywords.ts  cli.ts  commands-scanner.ts  debug.ts  index.ts  mock-claude.ts  pending-marker.ts  permission.ts  session-store.ts  tool-summary.ts
implementations/codebuddy-code/: .gitignore  README.md  package.json  tsconfig.json
implementations/paw-agent-py/: README.md
implementations/shepaw-agent-hub/: README.md  package.json  vitest.config.ts
integration/noise-interop/: fixture_dart_to_ts.json  generate-fixture.mjs
mac_agent/: README.md  llm_agent.py  mac_agent.py  mac_tools.py
openclaw/: CHANGELOG.md  index.ts  openclaw.plugin.json  package.json
openclaw/src/: channel.ts  runtime.ts  server.ts  types.ts
paw_acp_sdk/: pyproject.toml
paw_acp_sdk/examples/: echo_agent.py  llm_agent_example.py  tunnel_agent_example.py
paw_acp_sdk/paw_acp_sdk/: __init__.py  directive_parser.py  jsonrpc.py  providers.py  server.py  task_context.py  tunnel.py  types.py
paw_agent/: paw_agent.py
paw_agent/tools/: __init__.py  base_tools.py  windows_tools.py
sdks/shepaw-acp-sdk-python/: API_REFERENCE.md  pyproject.toml
sdks/shepaw-acp-sdk-python/examples/: echo_agent.py  llm_agent_example.py
sdks/shepaw-acp-sdk-python/shepaw_acp_sdk/: conversation.py  openclaw_channel.py  server.py  task_context.py  tunnel.py  utils.py
sdks/shepaw-acp-sdk-typescript/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
shepaw_acp_sdk/: LICENSE  README.md  pyproject.toml
shepaw_acp_sdk/examples/: echo_agent.py  llm_agent_example.py  openclaw_agent_example.py  tunnel_agent_example.py
shepaw_acp_sdk/shepaw_acp_sdk/: __init__.py  openclaw_channel.py
shepaw_agent/tools/: mac_tools.py
tools/debug-clients/: README.md  test_no_hub_response.py
(+95 files in other folders)
